--- a/index.html
+++ b/index.html
@@ -81,16 +81,16 @@
                 </div>
                 <div class="container-fluid text-center">
                     <ul class="list-inline" style="white-space: nowrap; margin:0px 0px 0px 0px;" >
-                        <li><a style="font-size: calc(min(3vw, 15px))" href="">David Junhao Zhang¹²</a></li>
-                        <li><a style="font-size: calc(min(3vw, 15px))" href="">Roni Paiss¹</a></li>
-                        <li><a style="font-size: calc(min(3vw, 15px))" href="">Shiran Zada¹</a></li>
-                        <li><a style="font-size: calc(min(3vw, 15px))" href="">Nikhil Karnad¹</a></li>
-                        <li><a style="font-size: calc(min(3vw, 15px))" href="">David E. Jacobs¹</a></li><br>
-                        <li><a style="font-size: calc(min(3vw, 15px))" href="">Yael Pritch¹</a></li>
-                        <li><a style="font-size: calc(min(3vw, 15px))" href=""> Inbar Mosseri¹</a></li>
-                        <li><a style="font-size: calc(min(3vw, 15px))" href=""> Mike Zheng Shou²</a></li>
-                        <li><a style="font-size: calc(min(3vw, 15px))" href=""> Neal Wadhwa¹</a></li>
-                        <li><a style="font-size: calc(min(3vw, 15px))"  href="">Nataniel Ruiz¹</a></li>
+                        <li><a style="font-size: calc(min(3vw, 15px))" href="https://junhaozhang98.github.io/">David Junhao Zhang¹²</a></li>
+                        <li><a style="font-size: calc(min(3vw, 15px))" href="https://scholar.google.com/citations?user=-KSDNZQAAAAJ&hl=en">Roni Paiss¹</a></li>
+                        <li><a style="font-size: calc(min(3vw, 15px))" href="https://scholar.google.com/citations?hl=en&user=I2qheksAAAAJ">Shiran Zada¹</a></li>
+                        <li><a style="font-size: calc(min(3vw, 15px))" href="https://scholar.google.com/citations?user=qgc_jY0AAAAJ&hl=en">Nikhil Karnad¹</a></li>
+                        <li><a style="font-size: calc(min(3vw, 15px))" href="https://scholar.google.com/citations?user=0VQ1sjcAAAAJ&hl=en">David E. Jacobs¹</a></li><br>
+                        <li><a style="font-size: calc(min(3vw, 15px))" href="https://scholar.google.co.il/citations?user=Zi5KiDsAAAAJ&hl=en">Yael Pritch¹</a></li>
+                        <li><a style="font-size: calc(min(3vw, 15px))" href="https://inbar-mosseri.github.io/"> Inbar Mosseri¹</a></li>
+                        <li><a style="font-size: calc(min(3vw, 15px))" href="https://scholar.google.com/citations?user=h1-3lSoAAAAJ&hl=zh-CN"> Mike Zheng Shou²</a></li>
+                        <li><a style="font-size: calc(min(3vw, 15px))" href="https://scholar.google.com/citations?user=Fm5mjCAAAAAJ&hl=en"> Neal Wadhwa¹</a></li>
+                        <li><a style="font-size: calc(min(3vw, 15px))"  href="https://natanielruiz.github.io/">Nataniel Ruiz¹</a></li>
                 </div>
                 <div class="col-md-12 text-center" style="font-size: calc(min(3vw, 15px))">
             ¹Google &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;²National University of Singapore&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<div style="display: inline; font-family:verdana; font-size: calc(min(3vw, 15px))"><br>
@@ -121,11 +121,15 @@
                     </video>
                 </div>
             </div><br><br>
-
-
             <div class="row">
-
-            </div><br><br>
+                <div class="col-md-8 offset-md-2">
+                    <h3> Method overview </h3>
+                    <img width="100%" src="assets/intro.jpg" alt="A diagram explaining the method..">
+                    <figcaption class="text-justify margin-5" style="text-align: left;">
+                        <b>ReCapture</b> consists, at setup time, of (a) Anchor video generation (b) Masked video fine-tuning using spatial and temporal LoRAs. To generate the clean output video with the new camera trajectory we simply perform inference of the video model.
+                    </figcaption>
+                </div>
+            </div>
             
     </div>
 </body>
