--- a/index.html
+++ b/index.html
@@ -123,11 +123,11 @@
             </div><br><br>
             <div class="row">
                 <div class="col-md-8 offset-md-2">
-                    <h3> Method overview </h3>
-                    <img width="100%" src="assets/intro.jpg" alt="A diagram explaining the method..">
-                    <figcaption class="text-justify margin-5" style="text-align: left;">
+                    <h3> Method </h3>
+                    <p class="text-justify" style="text-align: left;">
                         <b>ReCapture</b> consists, at setup time, of (a) Anchor video generation (b) Masked video fine-tuning using spatial and temporal LoRAs. To generate the clean output video with the new camera trajectory we simply perform inference of the video model.
-                    </figcaption>
+                    </p>
+                    <img width="100%" src="assets/intro.jpg" alt="A diagram explaining the method..">
                 </div>
             </div>
             
