--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
             <!-- <div class="container" id="main"> -->
             <div class="row">
                 <h2 class="col-md-12 text-center">
-                    <b>ReCapture:</b> Generative Video Camera Controls for User-Provided Videos using Masked Video Fine-Tuning</br>
+                    <b>ReCapture:</b> Generative Video Camera Controls for <br>
+                    User-Provided Videos using Masked Video Fine-Tuning</br>
                 </h2>
             </div>
             <div class="row text-center">
@@ -118,9 +119,12 @@
                     <video id="co3d-grid" poster="img/teaser_frame.jpg" width="100%" autoplay loop muted controls playsinline>
 					  <source src="teaser.mp4" type="video/mp4"></source>
                     </video>
-                    <p class="text-justify" style="text-align: left;">
-                        We present <b>ReCapture</b>, a method for generating new videos with novel camera trajectories from a single user-provided video.  Our method allows us to re-generate the source video, with all its existing scene motion, from vastly different angles and with cinematic camera motion.
-                    </p>
+                    <div class="text-left" style="font-size: 1.1rem; line-height: 1.6; color: #333;">
+                        <p>
+                            We present <strong style="color: #333399;">ReCapture</strong>, a method for generating new videos with novel camera trajectories from a single user-provided video. Our method allows us to re-generate the source video, with all its existing scene motion, from vastly different angles and with cinematic camera motion.
+                        </p>
+                    </div>
+                                  
                 </div>
             </div><br><br>
             <div class="row">
