--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             </div>
             <div class="row text-center">
                 <span class="link-block" style="padding-top: 10px; padding-bottom: 10px">
-                    <a href="" class="external-link button is-normal is-rounded is-dark"
+                    <a href="https://arxiv.org/abs/2411.05003" class="external-link button is-normal is-rounded is-dark"
                         style="width: 80px; font-size: 15px">
                         <span class="icon">
                             <i class="ai ai-arxiv"></i>
