--- a/index.html
+++ b/index.html
@@ -137,6 +137,9 @@
                 </div>
             </div>
 
+
+            <br>
+            <br>
             <div class="row">
                 <div class="col-md-8 offset-md-2">
                     <h3> Anchor Video Generation </h3>
@@ -153,6 +156,22 @@
                     </p>
                 </div>
             </div>
+
+            <br>
+            <br>
+
+            <div class="row">
+                <div class="col-md-8 offset-md-2">
+                    <h3> Results </h3>
+
+            <br>
+            <br>
+                    <video id="co3d-grid" poster="img/teaser_frame.jpg" width="70%" autoplay loop muted controls playsinline>
+					  <source src="demo.mp4" type="video/mp4"></source>
+                    </video>
+                                  
+                </div>
+            </div><br><br>
             
     </div>
 </body>
