--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 <div class="col-md-8 offset-md-2">
                     <h3>Gallery</h3>
                     <p class="text-justify" style="text-align: left;">
-                        The outcomes of various camera trajectories following ReCapture.
+                        The outcomes of various camera trajectories following ReCapture. You can select various camera motions by pressing the different buttons, and click the arrow to view multiple examples for each camera motion.
                     </p>
             
                     <div id="single-image-compare">
